[package]
name = "tree-sitter-vktl"
description = "Parser for TL language https://github.com/VKCOM/tl"
version = "0.1.0"
authors = ["Sergei Razmetov <razmser@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vktl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/razmser/tree-sitter-vktl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
